Exercise2 [Julia] bugfix: StatusLabel was not showing - fixed the problem and the visual representation. Test of label with "No movies" if text was 'tttttt'. Tests still needed

--- a/src/main/resources/org/fhmdb/fhmdb_lijunamatata/styles.css
+++ b/src/main/resources/org/fhmdb/fhmdb_lijunamatata/styles.css
@@ -20,6 +20,12 @@
     -fx-font-weight: bold;
 }
 
+.statusLabel {
+    -fx-font-size: 16px;
+    -fx-font-weight: bold;
+    -fx-text-fill: #f5c518;
+}
+
 .text-yellow {
     -fx-text-fill: #f5c518;
 }
